big change: not using webpack, using gulp

--- a/bower.json
+++ b/bower.json
@@ -24,6 +24,7 @@
     "morrisjs": "~0.5.1",
     "datatables-responsive": "~1.0.3",
     "bootstrap-social": "~4.8.0",
-    "flot.tooltip": "~0.8.4"
+    "flot.tooltip": "~0.8.4",
+    "angular-ui-router": "~0.2.15"
   }
 }
