--- a/package.json
+++ b/package.json
@@ -69,5 +69,9 @@
     "tiny-lr": "^0.1.7",
     "url-loader": "0.5.5",
     "vinyl-source-stream": "^1.1.0"
+  },
+  "dependencies": {
+    "brain": "^0.7.0",
+    "tincanjs": "^0.41.1"
   }
 }
