ADDED: upload statements using a json file. ADDED: calc intelligenceType

--- a/bower.json
+++ b/bower.json
@@ -26,6 +26,8 @@
     "bootstrap-social": "~4.8.0",
     "flot.tooltip": "~0.8.4",
     "angular-ui-router": "~0.2.15",
-    "angular-bootstrap": "~0.14.3"
+    "angular-bootstrap": "~0.14.3",
+    "Chart.js": "^2.1.2",
+    "angular-chartjs-directive": "^1.0.0"
   }
 }
