--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
   },
   "dependencies": {
     "brain": "^0.7.0",
+    "express": "4.13.4",
     "node": "0.0.0",
     "passport-localapikey": "0.0.3",
     "tincanjs": "^0.41.1"
