--- a/package.json
+++ b/package.json
@@ -13,64 +13,63 @@
     "start": "node app.js"
   },
   "devDependencies": {
-    "babel": "^6.3.13",
-    "babel-core": "^5.0.8",
-    "babel-loader": "^5.0.0",
-    "babel-preset-es2015": "^6.3.13",
-    "babelify": "^7.2.0",
+    "babel": "6.3.13",
+    "babel-core": "5.0.8",
+    "babel-loader": "5.0.0",
+    "babel-preset-es2015": "6.3.13",
+    "babelify": "7.2.0",
     "bcrypt-nodejs": "0.0.3",
-    "body-parser": "^1.14.1",
-    "bootstrap": "^3.3.6",
-    "browserify": "^12.0.1",
-    "connect-flash": "^0.1.1",
-    "connect-livereload": "^0.5.4",
-    "cookie-parser": "^1.4.0",
-    "css-loader": "^0.9.1",
-    "del": "^2.2.0",
-    "ejs": "^2.3.4",
-    "eslint": "^1.10.3",
-    "exports-loader": "^0.6.2",
-    "express": "^4.13.3",
-    "express-session": "^1.12.1",
-    "extract-text-webpack-plugin": "^0.9.1",
+    "body-parser": "1.14.1",
+    "bootstrap": "3.3.6",
+    "browserify": "12.0.1",
+    "connect-flash": "0.1.1",
+    "connect-livereload": "0.5.4",
+    "cookie-parser": "1.4.0",
+    "css-loader": "0.9.1",
+    "del": "2.2.0",
+    "ejs": "2.3.4",
+    "eslint": "1.10.3",
+    "exports-loader": "0.6.2",
+    "express": "4.13.3",
+    "express-session": "1.12.1",
+    "extract-text-webpack-plugin": "0.9.1",
     "file-loader": "0.8.1",
-    "gulp": "^3.9.0",
+    "gulp": "3.9.0",
     "gulp-bower": "0.0.10",
-    "gulp-concat": "^2.5.2",
-    "gulp-connect": "^2.3.1",
-    "gulp-express": "^0.3.5",
-    "gulp-inject": "^1.2.0",
-    "gulp-less": "^3.0.3",
-    "gulp-ngmin": "^0.3.0",
-    "gulp-notify": "^2.2.0",
-    "gulp-rename": "^1.2.2",
-    "gulp-sass": "^2.1.1",
-    "gulp-uglify": "^1.2.0",
-    "imports-loader": "^0.6.3",
+    "gulp-concat": "2.5.2",
+    "gulp-connect": "2.3.1",
+    "gulp-express": "0.3.5",
+    "gulp-inject": "1.2.0",
+    "gulp-less": "3.0.3",
+    "gulp-ngmin": "0.3.0",
+    "gulp-notify": "2.2.0",
+    "gulp-rename": "1.2.2",
+    "gulp-sass": "2.1.1",
+    "gulp-uglify": "1.2.0",
+    "imports-loader": "0.6.3",
     "json-loader": "0.5.1",
-    "less-loader": "^2.2.0",
-    "lodash": "^3.3.1",
+    "less-loader": "2.2.0",
+    "lodash": "3.3.1",
     "mongodb-schema-miner": "0.0.1",
-    "mongoose": "^4.2.10",
+    "mongoose": "4.2.10",
     "nginjector-loader": "0.0.2",
-    "now": "^0.8.1",
-    "passport": "^0.3.2",
-    "passport-facebook": "^2.0.0",
-    "passport-google-oauth": "^0.2.0",
-    "passport-local": "^1.0.0",
-    "passport-twitter": "^1.0.3",
-    "raw-loader": "^0.5.1",
-    "socket.io": "^1.3.7",
-    "style-loader": "^0.9.0",
-    "tiny-lr": "^0.1.7",
+    "now": "0.8.1",
+    "passport": "0.3.2",
+    "passport-facebook": "2.0.0",
+    "passport-google-oauth": "0.2.0",
+    "passport-local": "1.0.0",
+    "passport-twitter": "1.0.3",
+    "raw-loader": "0.5.1",
+    "socket.io": "1.3.7",
+    "style-loader": "0.9.0",
+    "tiny-lr": "0.1.7",
     "url-loader": "0.5.5",
-    "vinyl-source-stream": "^1.1.0"
+    "vinyl-source-stream": "1.1.0"
   },
   "dependencies": {
-    "brain": "^0.7.0",
-    "express": "4.13.4",
+    "brain": "0.7.0",
     "node": "0.0.0",
     "passport-localapikey": "0.0.3",
-    "tincanjs": "^0.41.1"
+    "tincanjs": "0.41.1"
   }
 }
