--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "scripts": {
     "start": "node app.js"
   },
-  "devDependencies": {
+  "dependencies": {
     "babel": "6.3.13",
     "babel-core": "5.0.8",
     "babel-loader": "5.0.0",
@@ -34,18 +34,6 @@
     "express-session": "1.12.1",
     "extract-text-webpack-plugin": "0.9.1",
     "file-loader": "0.8.1",
-    "gulp": "3.9.0",
-    "gulp-bower": "0.0.10",
-    "gulp-concat": "2.5.2",
-    "gulp-connect": "2.3.1",
-    "gulp-express": "0.3.5",
-    "gulp-inject": "1.2.0",
-    "gulp-less": "3.0.3",
-    "gulp-ngmin": "0.3.0",
-    "gulp-notify": "2.2.0",
-    "gulp-rename": "1.2.2",
-    "gulp-sass": "2.1.1",
-    "gulp-uglify": "1.2.0",
     "imports-loader": "0.6.3",
     "json-loader": "0.5.1",
     "less-loader": "2.2.0",
@@ -64,12 +52,23 @@
     "style-loader": "0.9.0",
     "tiny-lr": "0.1.7",
     "url-loader": "0.5.5",
-    "vinyl-source-stream": "1.1.0"
-  },
-  "dependencies": {
-    "angular-ui-router": "^0.3.0",
+    "vinyl-source-stream": "1.1.0",
     "brain": "0.7.0",
     "passport-localapikey": "0.0.3",
     "tincanjs": "0.41.1"
+  },
+  "devDependencies": {
+    "gulp": "3.9.0",
+    "gulp-bower": "0.0.10",
+    "gulp-concat": "2.5.2",
+    "gulp-connect": "2.3.1",
+    "gulp-express": "0.3.5",
+    "gulp-inject": "1.2.0",
+    "gulp-less": "3.0.3",
+    "gulp-ngmin": "0.3.0",
+    "gulp-notify": "2.2.0",
+    "gulp-rename": "1.2.2",
+    "gulp-sass": "2.1.1",
+    "gulp-uglify": "1.2.0"
   }
 }
