--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "1.14.1",
     "bootstrap": "3.3.6",
+    "brain": "0.7.0",
     "browserify": "12.0.1",
+    "compendium": "0.0.3",
     "connect-flash": "0.1.1",
     "connect-livereload": "0.5.4",
     "cookie-parser": "1.4.0",
@@ -46,16 +48,15 @@
     "passport-facebook": "2.0.0",
     "passport-google-oauth": "0.2.0",
     "passport-local": "1.0.0",
+    "passport-localapikey": "0.0.3",
     "passport-twitter": "1.0.3",
     "raw-loader": "0.5.1",
     "socket.io": "1.3.7",
     "style-loader": "0.9.0",
+    "tincanjs": "0.41.1",
     "tiny-lr": "0.1.7",
     "url-loader": "0.5.5",
-    "vinyl-source-stream": "1.1.0",
-    "brain": "0.7.0",
-    "passport-localapikey": "0.0.3",
-    "tincanjs": "0.41.1"
+    "vinyl-source-stream": "1.1.0"
   },
   "devDependencies": {
     "gulp": "3.9.0",
