--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,12 @@
 .DS_Store
 node_modules
 bower_components
-dist
 public
 npm-debug.log
 mappe.json
 /**/mappe.json
+dist
+app/scripts.js
+app/styles.css
+app/elaio.js
+app/elaio.css
